--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 		<div id = "principal">
 			<img src="imagens/capa.png">
+			<div id ="menu">
+				<a href="index.html">Home</a> |
+				<a href="biografia.html">Biografia</a> |
+				<a href="campanhas.html">Campanhas Publicitárias</a> |
+				<a href="contato.html">Contato</a> |
+			</div>
 		</div>
 	</body>
 </html>
