--- a/biografia.html
+++ b/biografia.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ana Bella - Home</title>
+		<title>Ana Bella - Biografia</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
@@ -18,7 +18,7 @@
 			</div>
 
 			<div id = "conteudo">
-				<h1>Sobre Ana Bella</h1> <!-- Descrição -->
+				<h1>Biografia</h1> <!-- Descrição -->
 
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porttitor luctus ipsum eu efficitur. Etiam vel ullamcorper tortor. Quisque porta sodales lectus in auctor. Cras ornare, sapien sed volutpat egestas, nulla lacus pulvinar velit, id varius libero risus a velit. Ut faucibus, lectus mollis ullamcorper interdum, lectus felis tempor nulla, a ornare quam nisi at eros. Nam non porta purus. Fusce in nibh vitae mi luctus hendrerit. Aliquam lectus nisi, hendrerit nec luctus et, vulputate eu neque. Fusce laoreet sagittis hendrerit. Phasellus nisl est, venenatis at lectus vel, porttitor semper nulla. Donec eu ante rutrum dui vehicula pharetra eget rhoncus nibh. Aenean eu nulla ac mauris eleifend dictum. Proin a nunc ac tortor malesuada gravida ac vel nisl. Fusce ut accumsan nulla.
